| Bug #21002 | Derived table not selecting from a "real" table fails in JOINs | ||
|---|---|---|---|
| Submitted: | 12 Jul 2006 17:18 | Modified: | 2 Aug 2006 21:00 |
| Reporter: | Beat Vontobel (Silver Quality Contributor) (SCA) | ||
| Status: | Closed | ||
| Category: | Server: Parser | Severity: | S2 (Serious) |
| Version: | 5.0.23,5.1 | OS: | Any (any) |
| Assigned to: | Konstantin Osipov | Target Version: | |
[12 Jul 2006 17:18]
Beat Vontobel
[12 Jul 2006 17:45]
Victoria Reznichenko
Behaviour was changed between 5.0.22 and 5.0.23 and I don't see anything related in 'Changes in release' section. This is how it works in 5.0.22: mysql> SELECT * FROM test.t INNER JOIN ( SELECT 1 AS i ) AS t2 USING (i); +------+ | i | +------+ | 1 | +------+ 1 row in set (0.00 sec) mysql> select version(); +-------------------------+ | version() | +-------------------------+ | 5.0.22-community-nt-log | +-------------------------+ 1 row in set (0.01 sec) and result from latest 5.0: mysql> SELECT * FROM test.t INNER JOIN ( SELECT 1 AS i ) AS t2 USING (i); ERROR 1046 (3D000): No database selected mysql> select version(); +------------------+ | version() | +------------------+ | 5.0.24-debug-log | +------------------+ 1 row in set (0.00 sec)
[13 Jul 2006 1:18]
Konstantin Osipov
This is caused by the fix for Bug#19022.
[15 Jul 2006 0:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/9185
[19 Jul 2006 12:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/9330
[19 Jul 2006 16:36]
Tomash Brechko
Approved by e-mail with minor suggestion.
[19 Jul 2006 20:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/9345
[19 Jul 2006 23:32]
Konstantin Osipov
Pushed into the release clone of 5.0.24
[20 Jul 2006 19:31]
Paul DuBois
Noted in 5.0.24 changelog. A SELECT that used a subquery in the FROM clause that did not select from a table failed when the subquery was used in a join. Setting bug report back to NDI pending push of fix into 5.1.
[2 Aug 2006 17:58]
Konstantin Osipov
Fixed in 5.1.12
[2 Aug 2006 21:00]
Paul DuBois
Noted in 5.1.12 changelog.
