sql/sql_parse.cc
@@ -6088,8 +6088,7 @@ TABLE_LIST *st_select_lex::add_table_to_list(THD *thd,
   if (!table)
     DBUG_RETURN(0);				// End of memory
   alias_str= alias ? alias->str : table->table.str;
-  if (check_table_name(table->table.str,table->table.length) ||
-      table->db.str && check_db_name(table->db.str))
+  if (check_table_name(table->table.str, table->table.length))
   {
     my_error(ER_WRONG_TABLE_NAME, MYF(0), table->table.str);
     DBUG_RETURN(0);
@@ -6110,6 +6109,11 @@ TABLE_LIST *st_select_lex::add_table_to_list(THD *thd,
     DBUG_RETURN(0);				/* purecov: inspected */
   if (table->db.str)
   {
+    if (table->is_derived_table() == FALSE && check_db_name(table->db.str))
+    {
+      my_error(ER_WRONG_DB_NAME, MYF(0), table->db.str);
+      DBUG_RETURN(0);
+    }
     ptr->db= table->db.str;
     ptr->db_length= table->db.length;
   }
